--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Corona - Inzidenz</title>
-    <link rel="stylesheet" href="https://app.gservon.de/fonts/roboto/style.css>
+    <link rel="stylesheet" href="https://app.gservon.de/fonts/roboto/style.css">
     <link rel="stylesheet" href="https://app.gservon.de/libs/mdi/5.4.55/css/materialdesignicons.min.css">
   </head>
   <body>
